# theia-agent-pkg

./: .coverage  README.md  install.ps1  pyproject.toml
src/theia_agent/: __init__.py  cli.py  server.py
src/theia_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/integration/: test_commit_flow.py  test_routes_consistency.py
tests/unit/: test_cli_completer.py  test_cli_execution.py  test_cli_parse_dispatch.py  test_cli_runtime.py  test_package_exports.py  test_server_routes.py
